--- a/PhotoLibraryAnalyzer/Base.lproj/Main.storyboard
+++ b/PhotoLibraryAnalyzer/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -15,18 +16,44 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PQd-nR-MFc">
-                                <rect key="frame" x="180" y="433" width="54" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PQd-nR-MFc">
+                                <rect key="frame" x="180" y="832" width="54" height="30"/>
                                 <state key="normal" title="Analyze"/>
                                 <connections>
                                     <action selector="analyzeBtn_didClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Y53-lf-tU8"/>
                                 </connections>
                             </button>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="PGP-7f-86q">
+                                <rect key="frame" x="16" y="44" width="382" height="762"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="29b-MU-cuz">
+                                    <size key="itemSize" width="88" height="86"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells/>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="4XL-AY-EgD"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="4zV-iz-reU"/>
+                                </connections>
+                            </collectionView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="PGP-7f-86q" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="6H2-uR-BaI"/>
+                            <constraint firstItem="PGP-7f-86q" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="NwL-bt-21J"/>
+                            <constraint firstItem="PQd-nR-MFc" firstAttribute="top" secondItem="PGP-7f-86q" secondAttribute="bottom" constant="26" id="UBs-Zb-Hrw"/>
+                            <constraint firstItem="PQd-nR-MFc" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="f6P-0u-QYu"/>
+                            <constraint firstItem="PQd-nR-MFc" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="kmE-Mi-Wrb"/>
+                            <constraint firstItem="PGP-7f-86q" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" constant="-16" id="zr9-mu-qEX"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="collectionView" destination="PGP-7f-86q" id="RgM-fa-7Wx"/>
+                        <outlet property="collectionViewFlowLayout" destination="29b-MU-cuz" id="Ec4-jx-lpA"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
